[package]
name = "middle-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = { version = "1.0.0", features = ["use-std"] }
serde = { version = "1.0.164", features = ["derive"] }

[lib]
crate-type = ["cdylib"]