[package]
name = "middle_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = { version = "1.0.0", features = ["use-std"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
macros = { path = "macros" }


[profile.release]
opt-level = 's'
lto = true


# For my own sanity, I'm leaving this comment in here.
# If I want to just test a build of middle-wasm on its own, I can uncomment the bloe.
# See https://github.com/rust-lang/cargo/issues/8311
# And https://github.com/rust-lang/cargo/issues/9016
# [lib]
# crate-type = ["cdylib"]
